[package]
name = "lockness_challenge"
version = "0.1.0"
edition = "2024"

[dependencies]
generic-ec = { version = "0.5", default-features = false, features = [
    "std",
    "curve-ed25519",
    "curve-secp256k1",
    "curve-secp384r1",
] }
rand_core = "0.6"
sha2 = "0.10"

[dev-dependencies]
hex = "0.4"
rand_chacha = "0.3"
